# AssignmentCpp

./: Account.cpp  Account.hpp  AdminProcess.cpp  AdminProcess.hpp  CMakeLists.txt  GlobalVariants.cpp  GlobalVariants.hpp  HashSum.cpp  HashSum.hpp  IOHelper.hpp  ModelBase.hpp  Utils.cpp  Utils.hpp  json.hpp  main.cpp  readme.md
